fixing scrollbar on ios and firefox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,3 +93,7 @@ Chakra Ui overwrites */
 .container ::-webkit-scrollbar {
   display: none;
 }
+.container {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
